--- a/public/app/pages/timeline/timeLine/timeline.html
+++ b/public/app/pages/timeline/timeLine/timeline.html
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 form-group">
+                    <div class="col-md-12">
                         <div class="col-md-2">
                             <label><h4>Фильтровать по полю:</h4></label>
                         </div>
@@ -133,7 +133,7 @@
                             </label>
                         </div>
                         <div class="col-md-1 col-md-offset-1">
-                            <button type="button" class="btn btn-primary btn-block btn-no-transform" ng-click="selected.change.filter()">Применить</button>
+                            <button type="button" class="btn btn-primary btn-xs btn-block btn-no-transform" ng-click="selected.change.filter()">Применить</button>
                         </div>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
             <div class="cd-timeline-content" ng-class="isNull(item.css.class) ? '' : 'timeline-content-' + item.css.class">
                 <img ng-if="item.avatar" ng-src="{{item.avatar}}">
                 <p ng-bind-html="item.message"></p>
-                <span class="cd-date">{{ (item.date | date: "dd MMMM yyyy, EEEE") }}</span>
+                <span class="cd-date">{{ (item.date | date: "dd MMMM yyyy, EEEE (HH:mm)") }}</span>
             </div>
         </div>
     </div>
